<resources>
    <string name="app_name">Vela</string>
    <string name="rating"> <u>Rating &amp; Comments</u>.</string>
    <string name="app_id">1270089453031095</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_block_user">Block</string>
    <string name="action_pick_location">Pick Location</string>
    <string name="action_search">Search Items</string>
    <string name="action_edit">Edit</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="forgotmsg">Oops!Forgot your password ?\n We will send you shortly.</string>
    <!-- Error messages -->
    <string name="error">Sorry, an error occurred. Please try again.</string>
    <string name="no_internet_connection">Please check your internet connection and try again.</string>
    <string name="location_unavailable">Unable to fetch location. Please try again.</string>
    <string name="user_already_exists">User with username already exists.</string>
    <string name="unauthorize_access">Access Denied. User does not have permission to view this content.</string>
</resources>
