<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vela.app.mobile.ui.home.HomeActivity">
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_edit"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_settings"/>
    <item
        android:id="@+id/action_block_user"
        android:orderInCategory="102"
        android:title="@string/action_block_user"
        app:showAsAction="always" />
</menu>
