<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vela.app.mobile.ui.home.HomeActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_search"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_pick_location"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_pointer_advice"/>
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="102"
        android:title="@string/action_filter"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_filter"/>
</menu>
